tests/0024-closure-shadow-with-local.src.err
tests/0024-closure-shadow-with-local.src:3
ERROR: Variable already defined 'foo'
 |     let foo = "shadow";
           ^
