tests/0024-closure-shadow-with-local.src
let foo = "closure";
let f = fun () {
    let foo = "shadow";
    println (foo);
};
println (foo);
f ();